Fixing play button on Safari

--- a/assets/theme/clixtv/src/ui/common/container/video-content-callout.less
+++ b/assets/theme/clixtv/src/ui/common/container/video-content-callout.less
@@ -174,6 +174,9 @@
             &:hover {
                 .brightness(0.8);
             }
+            img {
+                max-width: 100%;
+            }
         }
 
         .video-watchlist-button {
